# MicrosoftFoundry

./: .gitignore  main.py  pyproject.toml  pyproject.toml.bak_original
A2A/A2A_Container_Apps/: A2A_to_ACA.md
A2A/A2A_Container_Apps/A2A_Server/: requirements.txt
AgentService/Getting_Started/: agent_run.ipynb
AgentService/Memories/: .env  memories.ipynb
GettingStarted/Foundry_Catalog_Completions/: chat_completions.ipynb
GettingStarted/OpenAI_Chat_Completions/: chatCompletions.ipynb
