[project]
name = "microsoftfoundry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "a2a-sdk",
    "ag-ui-protocol",
    "agent-framework",
    "agent-framework-a2a",
    "agent-framework-ag-ui",
    "agent-framework-anthropic",
    "agent-framework-azure-ai",
    "agent-framework-azure-ai-search",
    "agent-framework-azurefunctions",
    "agent-framework-chatkit",
    "agent-framework-copilotstudio",
    "agent-framework-core",
    "agent-framework-declarative",
    "agent-framework-devui",
    "agent-framework-lab",
    "agent-framework-mem0",
    "agent-framework-purview",
    "agent-framework-redis",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "annotated-doc",
    "annotated-types",
    "anthropic",
    "anyio",
    "asttokens",
    "attrs",
    "azure-ai-agents",
    "azure-ai-projects",
    "azure-common",
    "azure-core",
    "azure-functions",
    "azure-functions-durable",
    "azure-identity",
    "azure-search-documents",
    "azure-storage-blob",
    "backoff",
    "cachetools",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "clr_loader",
    "colorama",
    "comm",
    "cryptography",
    "debugpy",
    "decorator",
    "distro",
    "docstring_parser",
    "executing",
    "fastapi",
    "frozenlist",
    "furl",
    "google-api-core",
    "google-auth",
    "googleapis-common-protos",
    "greenlet",
    "griffe",
    "grpcio",
    "h11",
    "h2",
    "hpack",
    "httpcore",
    "httptools",
    "httpx",
    "httpx-sse",
    "hyperframe",
    "idna",
    "importlib_metadata",
    "ipykernel",
    "ipython",
    "ipython_pygments_lexers",
    "isodate",
    "jedi",
    "Jinja2",
    "jiter",
    "jsonpath-ng",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter_client",
    "jupyter_core",
    "MarkupSafe",
    "matplotlib-inline",
    "mcp",
    "mem0ai",
    "microsoft-agents-activity",
    "microsoft-agents-copilotstudio-client",
    "microsoft-agents-hosting-core",
    "ml_dtypes",
    "msal",
    "msal-extensions",
    "multidict",
    "nest-asyncio",
    "numpy",
    "openai",
    "openai-agents",
    "openai-chatkit",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-proto",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "opentelemetry-semantic-conventions-ai",
    "orderedmultidict",
    "packaging",
    "parso",
    "platformdirs",
    "ply",
    "portalocker",
    "posthog",
    "powerfx",
    "prompt_toolkit",
    "propcache",
    "proto-plus",
    "protobuf",
    "psutil",
    "pure_eval",
    "pyasn1",
    "pyasn1_modules",
    "pycparser",
    "pydantic",
    "pydantic-settings",
    "pydantic_core",
    "Pygments",
    "PyJWT",
    "python-dateutil",
    "python-dotenv",
    "python-multipart",
    "python-ulid",
    "pythonnet",
    "pytz",
    "pywin32",
    "PyYAML",
    "pyzmq",
    "qdrant-client",
    "redis",
    "redisvl",
    "referencing",
    "requests",
    "rpds-py",
    "rsa",
    "six",
    "sniffio",
    "SQLAlchemy",
    "sse-starlette",
    "stack-data",
    "starlette",
    "tenacity",
    "tornado",
    "tqdm",
    "traitlets",
    "types-requests",
    "typing-inspection",
    "typing_extensions",
    "urllib3",
    "uvicorn",
    "watchfiles",
    "wcwidth",
    "websockets",
    "Werkzeug",
    "yarl",
    "zipp",
]

[tool.uv]
prerelease = "allow"
